--- a/FL11_HW18/homework/css/main.css
+++ b/FL11_HW18/homework/css/main.css
@@ -1,44 +1,48 @@
 #wrapper {
-    width: 445px;    
-    margin: 0 auto;
+  position: relative;
+  width: 445px;
+  margin: 0 auto;
 }
 
 p {
-    height: 40px;
+  height: 40px;
 }
 
 #output {
-    margin: 20px 0;
-    width: 445px;
-    height: 370px;
-    border: 1px solid gray;
-    font-size: 13px;
+  margin: 20px 0;
+  width: 445px;
+  height: 370px;
+  border: 1px solid gray;
+  font-size: 13px;
 }
 
 #postsOutput {
-    margin: 0 auto;
-    width: 80vw;
+  margin: 0 auto;
+  width: 80vw;
 }
 
 select {
-    width: 200px;
+  width: 200px;
 }
 
 #loader {
-    display: none;
-    position: absolute;
-    top: 40vh;
-    left: 50vw;
-    border: 4px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 4px solid #3498db;
-    width: 20px;
-    height: 20px;    
-    animation: spin 2s linear infinite;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-    
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg);
   }
+}
