--- a/FL11_HW18/homework/css/main.css
+++ b/FL11_HW18/homework/css/main.css
@@ -26,6 +26,21 @@ select {
   width: 200px;
 }
 
+#img {
+    position: absolute;
+    top: 140px;
+    right: 0px;
+    display: inline-block;
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border: 1px solid lightgray;
+}
+
+#img img {
+    width: 100%;
+}
+
 #loader {
   display: none;
   position: absolute;
